force-app/main/default/objects/Project__c/fields/Content_Source__c.field-meta.xml
<CustomField>
    <fullName>Content_Source__c</fullName>
    <label>Content Source</label>
    <type>Url</type>
</CustomField>