force-app/main/default/objects/Project__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>