force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sequence_Number__c</columns>
    <columns>Topic__c</columns>
    <columns>Content_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>